fix tooltip overflow

--- a/src/ducks/WatchlistTable/index.module.scss
+++ b/src/ducks/WatchlistTable/index.module.scss
@@ -19,6 +19,7 @@
   left: 0;
   height: var(--addresses-list-table-top-height);
   width: 100%;
+  margin-top: 18px;
 }
 
 .actions {
