--- a/src/ducks/Watchlists/Widgets/Table/TableTop/index.module.scss
+++ b/src/ducks/Watchlists/Widgets/Table/TableTop/index.module.scss
@@ -2,6 +2,7 @@
 
 .wrapper {
   padding: 8px 40px 10px 32px;
+  margin-top: 2px;
   display: flex;
   justify-content: space-between;
   width: 100%;
